feat(connect-explorer-nextra): pages content improvements

--- a/packages/connect-explorer-nextra/src/pages/index.mdx
+++ b/packages/connect-explorer-nextra/src/pages/index.mdx
@@ -62,15 +62,11 @@ TrezorConnect.manifest({
 });
 ```
 
-If you need more customization, refer to [init method documentation](./methods/init.md)
-
-## API methods
-
--   [List of methods](methods.md)
+If you need more customization, refer to [init method documentation](./methods/other/init)
 
 ## Handling events
 
--   [Events](events.md)
+-   [Events](./details/events)
 
 ## How it works under the hood
 
