--- a/packages/connect-explorer-nextra/src/pages/methods/binance/binanceGetPublicKey.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/binance/binanceGetPublicKey.mdx
@@ -18,14 +18,14 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     showOnTrezor: 'determines if address will be displayed on device. Default is set to `true`',
     bundle: 'of Objects with `path` and `showOnTrezor` fields',
 };
 
 ## Binance: get public key
 
-Display requested public key derived by given [BIP44 path](../details/path) on device and returns it to caller.
+Display requested public key derived by given [BIP44 path](/details/path) on device and returns it to caller.
 User is presented with a description of the requested public key and asked to confirm the export.
 
 ```javascript
