--- a/packages/connect-explorer-nextra/src/pages/methods/bitcoin/getPublicKey.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/bitcoin/getPublicKey.mdx
@@ -14,7 +14,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `1`. [read more](../details/path)',
+    path: 'minimum length is `1`. [read more](/details/path)',
     coin: 'determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used. If `coin` is not set API will try to get network definition from `path`.',
     scriptType: 'used to distinguish between various address formats (non-segwit, segwit, etc.).',
     ignoreXpubMagic: 'ignore SLIP-0132 XPUB magic, use xpub/tpub prefix for all account types.',
