--- a/packages/connect-explorer-nextra/src/pages/methods/bitcoin/signMessage.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/bitcoin/signMessage.mdx
@@ -7,7 +7,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 <ApiPlayground options={[{ title: 'SignMessage', method: 'signMessage', schema: SignMessage }]} />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     message: '',
     coin: 'Determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used. If `coin` is not set API will try to get network definition from `path`.',
     hex: 'convert message from hex',
