--- a/packages/connect-explorer-nextra/src/pages/methods/cardano/cardanoGetAddress.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/cardano/cardanoGetAddress.mdx
@@ -28,9 +28,9 @@ export const paramDescriptions = {
     bundle: 'of Objects with single address fields',
     addressType:
         '/`number` - you can use the flow `CARDANO.ADDRESS_TYPE` object or typescript `CardanoAddressType` enum. Supports all address types.',
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     stakingPath:
-        'minimum length is `5`. [read more](../details/path) Used for base and reward address derivation',
+        'minimum length is `5`. [read more](/details/path) Used for base and reward address derivation',
     stakingKeyHash:
         'hex string of staking key hash. Used for base address derivation (as an alternative to `stakingPath`)',
     certificatePointer:
