--- a/packages/connect-explorer-nextra/src/pages/methods/cardano/cardanoGetPublicKey.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/cardano/cardanoGetPublicKey.mdx
@@ -22,7 +22,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     showOnTrezor: 'determines if publick key will be displayed on device. Default is set to `true`',
     derivationType: 'enum. determines used derivation type. Default is set to ICARUS_TREZOR=2',
     suppressBackupWarning:
