--- a/packages/connect-explorer-nextra/src/pages/methods/device/showDeviceTutorial.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/showDeviceTutorial.mdx
@@ -19,6 +19,8 @@ const result = await TrezorConnect.showDeviceTutorial(params);
 
 <CommonParamsLink />
 
+No other parameters.
+
 ### Example:
 
 ```javascript
