--- a/packages/connect-explorer-nextra/src/pages/methods/eos/eosGetPublicKey.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/eos/eosGetPublicKey.mdx
@@ -14,7 +14,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     showOnTrezor: 'determines if address will be displayed on device. Default is set to `true`',
     chunkify:
         'determines if address will be displayed in chunks of 4 characters. Default is set to `false`',
@@ -23,7 +23,7 @@ export const paramDescriptions = {
 
 ## Eos: get public key
 
-Display requested public key derived by given [BIP44 path](../details/path) on device and returns it to caller.
+Display requested public key derived by given [BIP44 path](/details/path) on device and returns it to caller.
 User is presented with a description of the requested public key and asked to confirm the export.
 
 ```javascript
