--- a/packages/connect-explorer-nextra/src/pages/methods/eos/eosSignTransaction.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/eos/eosSignTransaction.mdx
@@ -11,7 +11,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     transaction:
         'type of [EosSDKTransaction](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/eos/index.ts)',
     chunkify:
@@ -20,7 +20,7 @@ export const paramDescriptions = {
 
 ## Eos: sign transaction
 
-Asks device to sign given transaction using the private key derived by given [BIP44 path](../details/path). User is asked to confirm all transaction
+Asks device to sign given transaction using the private key derived by given [BIP44 path](/details/path). User is asked to confirm all transaction
 details on Trezor.
 
 ```javascript
