--- a/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumGetAddress.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumGetAddress.mdx
@@ -14,7 +14,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     address: 'address for validation (read `Handle button request` section below)',
     showOnTrezor: 'determines if address will be displayed on device. Default is set to `true`',
     chunkify:
