--- a/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumSignTransaction.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumSignTransaction.mdx
@@ -17,7 +17,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     transaction:
         'type of [`EthereumTransactionEIP1559`](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/ethereum/index.ts)`|`[`EthereumSignTransaction`](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/ethereum/index.ts) "0x" prefix for each field is optional',
     chunkify:
