--- a/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumSignTypedData.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumSignTypedData.mdx
@@ -25,7 +25,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     data: 'type of [`EthereumSignTypedDataMessage`](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/ethereum/index.ts)`. A JSON Schema definition can be found in the [EIP-712 spec](https://eips.ethereum.org/EIPS/eip-712).',
     metamask_v4_compat:
         "set to `true` for compatibility with [MetaMask's signTypedData_v4](https://docs.metamask.io/guide/signing-data.html#sign-typed-data-v4).",
