--- a/packages/connect-explorer-nextra/src/pages/methods/nem/nemGetAddress.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/nem/nemGetAddress.mdx
@@ -14,7 +14,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     address: 'address for validation (read `Handle button request` section below)',
     network: '`0x68` - Mainnet, `0x96` - Testnet, `0x60` - Mijin. Default is set to `Mainnet`',
     showOnTrezor: 'determines if address will be displayed on device. Default is set to `true`',
