--- a/packages/connect-explorer-nextra/src/pages/methods/other/cipherKeyValue.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/cipherKeyValue.mdx
@@ -18,7 +18,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `1`. [read more](../details/path)',
+    path: 'minimum length is `1`. [read more](/details/path)',
     key: 'a message shown on device',
     value: 'hexadecimal value with length a multiple of 16 bytes (32 letters in hexadecimal). Value is what is actually being encrypted.',
     askOnEncrypt: 'should user confirm encrypt?',
