--- a/packages/connect-explorer-nextra/src/pages/methods/other/getAccountDescriptor.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/getAccountDescriptor.mdx
@@ -22,7 +22,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     coin: 'determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.',
     derivationType: 'enum. determines used derivation type. Default is set to ICARUS_TREZOR=2',
     suppressBackupWarning:
