--- a/packages/connect-explorer-nextra/src/pages/methods/other/getOwnershipId.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/getOwnershipId.mdx
@@ -20,7 +20,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     coin: '',
     scriptType: '',
     multisig: '',
