--- a/packages/connect-explorer-nextra/src/pages/methods/other/getOwnershipProof.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/getOwnershipProof.mdx
@@ -20,14 +20,14 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     coin: '',
     scriptType: '',
     userConfirmation: '',
     ownershipIds: '',
     commitmentData: '',
     multisig: '',
-    preauthorized: '[read more](./authorizeCoinjoin.md)',
+    preauthorized: '[read more](../bitcoin/authorizeCoinjoin)',
     bundle: 'of Objects with fields listed above.',
 };
 
