--- a/packages/connect-explorer-nextra/src/pages/methods/other/requestLogin.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/requestLogin.mdx
@@ -100,9 +100,9 @@ Error
 Here is the reference implementation of the server-side signature verification
 written in various languages:
 
--   [**C#**](server/server.cs)
--   [**Javascript**](server/server.js)
--   [**PHP**](server/server.php)
--   [**Python**](server/server.py)
--   [**Ruby**](server/server.rb)
--   [**Go**](server/server.go)
+-   [**C#**](https://github.com/trezor/trezor-suite/tree/develop/docs/packages/connect/methods/server/server.cs)
+-   [**Javascript**](https://github.com/trezor/trezor-suite/tree/develop/docs/packages/connect/methods/server/server.js)
+-   [**PHP**](https://github.com/trezor/trezor-suite/tree/develop/docs/packages/connect/methods/server/server.php)
+-   [**Python**](https://github.com/trezor/trezor-suite/tree/develop/docs/packages/connect/methods/server/server.py)
+-   [**Ruby**](https://github.com/trezor/trezor-suite/tree/develop/docs/packages/connect/methods/server/server.rb)
+-   [**Go**](https://github.com/trezor/trezor-suite/tree/develop/docs/packages/connect/methods/server/server.go)
