--- a/packages/connect-explorer-nextra/src/pages/methods/ripple/rippleSignTransaction.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/ripple/rippleSignTransaction.mdx
@@ -15,7 +15,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     transaction:
         'type of [RippleTransaction](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/ripple/index.ts)',
     chunkify:
