--- a/packages/connect-explorer-nextra/src/pages/methods/tezos/tezosGetPublicKey.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/tezos/tezosGetPublicKey.mdx
@@ -18,7 +18,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     showOnTrezor: 'determines if public key will be displayed on device.',
     chunkify:
         'determines if address will be displayed in chunks of 4 characters. Default is set to `false`',
