--- a/packages/connect-explorer-nextra/src/pages/methods/binance/binanceSignTransaction.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/binance/binanceSignTransaction.mdx
@@ -15,7 +15,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `5`. [read more](../details/path)',
+    path: 'minimum length is `5`. [read more](/details/path)',
     transaction:
         'type of [BinanceSDKTransaction](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/binance/index.ts)',
     chunkify:
@@ -24,7 +24,7 @@ export const paramDescriptions = {
 
 ## Binance: sign transaction
 
-Asks device to sign given transaction using the private key derived by given [BIP44 path](../details/path). User is asked to confirm all transaction
+Asks device to sign given transaction using the private key derived by given [BIP44 path](/details/path). User is asked to confirm all transaction
 details on Trezor.
 
 ```javascript
