--- a/packages/connect-explorer-nextra/src/pages/methods/bitcoin/getAccountInfo.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/bitcoin/getAccountInfo.mdx
@@ -1,11 +1,87 @@
+import { Type } from '@sinclair/typebox';
+
 import { CommonParamsLink } from '../../../components/CommonParamsLink';
 import { ApiPlayground } from '../../../components/ApiPlayground';
 import getAccountInfo from '../../../data/methods/bitcoin/getAccountInfo';
+import { ParamsTable } from '../../../components/ParamsTable';
 
 <ApiPlayground options={[{ title: 'GetAccountInfo', legacyConfig: getAccountInfo[0] }]} />
 
+export const UsingPathSchema = Type.Object({
+    path: Type.Union([Type.String(), Type.Array(Type.Number())], {
+        description: 'minimum length is `3`. [read more](/details/path)',
+    }),
+    coin: Type.String({
+        description:
+            'determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.',
+    }),
+});
+
+export const UsingPubkeySchema = Type.Object({
+    descriptor: Type.String({
+        description: 'public key of account',
+    }),
+    coin: Type.String({
+        description:
+            'determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.',
+    }),
+});
+
+export const UsingDiscoverySchema = Type.Object({
+    coin: Type.String({
+        description:
+            'determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.',
+    }),
+});
+
+export const OtherParamsSchema = Type.Object({
+    details: Type.Optional(
+        Type.Union(
+            [
+                Type.Literal('basic'),
+                Type.Literal('tokens'),
+                Type.Literal('tokenBalances'),
+                Type.Literal('txs'),
+            ],
+            {
+                description:
+                    'specifies level of details returned by request\n' +
+                    '- `basic` (default) return only account balances, without any derived addresses or transaction history\n' +
+                    '- `tokens` - response with derived addresses (Bitcoin-like accounts) and ERC20 tokens (Ethereum-like accounts), subject of `tokens` param\n' +
+                    '- `tokenBalances` - same as `tokens` with balances, subject of `tokens` param\n' +
+                    '- `txs` - `tokenBalances` + complete account transaction history',
+            },
+        ),
+    ),
+    tokens: Type.Optional(
+        Type.Union([Type.Literal('nonzero'), Type.Literal('used'), Type.Literal('derived')], {
+            description:
+                'specifies which tokens (xpub addresses) are returned by the request (default nonzero)\n' +
+                '- `nonzero` - (Default) return only addresses with nonzero balance\n' +
+                '- `used` - return addresses with at least one transaction\n' +
+                '- `derived` - return all derived addresses',
+        }),
+    ),
+    page: Type.Optional(Type.Number()),
+    pageSize: Type.Optional(Type.Number()),
+    from: Type.Optional(Type.Number()),
+    to: Type.Optional(Type.Number()),
+    gap: Type.Optional(Type.Number()),
+    contractFilter: Type.Optional(Type.String()),
+    marker: Type.Optional(Type.Object({ ledger: Type.Number(), seq: Type.Number() })),
+    defaultAccountType: Type.Optional(
+        Type.Union([Type.Literal('normal'), Type.Literal('segwit'), Type.Literal('legacy')]),
+    ),
+    suppressBackupWarning: Type.Optional(Type.Boolean()),
+});
+
+export const GetAccountInfoSchema = Type.Intersect([
+    Type.Union([UsingPathSchema, UsingPubkeySchema, UsingDiscoverySchema]),
+    OtherParamsSchema,
+]);
+
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     coin: 'determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.',
     descriptor: 'public key of account',
     page: 'transaction history page index, subject of `details: txs`',
@@ -35,46 +111,23 @@ const result = await TrezorConnect.getAccountInfo(params);
 
 #### Using path
 
--   `path` — _required_ `string | Array<number>` minimum length is `3`. [read more](../path.md)
--   `coin` — _required_ `string` determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.
+<ParamsTable schema={UsingPathSchema} />
 
 #### Using public key
 
--   `descriptor` — _required_ `string` public key of account
--   `coin` — _required_ `string` determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.
+<ParamsTable schema={UsingPubkeySchema} />
 
 #### Using discovery
 
 BIP-0044 account discovery is performed and user is presented with a list of accounts. Result is returned after account selection.
 
--   `coin` — _required_ `string` determines network definition specified in [coins.json](https://github.com/trezor/trezor-suite/blob/develop/packages/connect-common/files/coins.json) file. Coin `shortcut`, `name` or `label` can be used.
+<ParamsTable schema={UsingDiscoverySchema} />
 
 ### Other optional params
 
 params are forwarded to [BlockBook backend](https://github.com/trezor/blockbook/blob/master/docs/api.md#api-v2) using `@trezor/blockchain-link` package
 
--   `details` — specifies level of details returned by request
-
-    -   `basic` (default) return only account balances, without any derived addresses or transaction history
-    -   `tokens` - response with derived addresses (Bitcoin-like accounts) and ERC20 tokens (Ethereum-like accounts), subject of `tokens` param
-    -   `tokenBalances` - same as `tokens` with balances, subject of `tokens` param
-    -   `txs` - `tokenBalances` + complete account transaction history
-
--   `tokens` — specifies which tokens (xpub addresses) are returned by the request (default nonzero)
-
-    -   `nonzero` - (Default) return only addresses with nonzero balance
-    -   `used` - return addresses with at least one transaction
-    -   `derived` - return all derived addresses
-
--   `page` — `number` transaction history page index, subject of `details: txs`
--   `pageSize` — `number` transaction history page size, subject of `details: txs`
--   `from` — `number` transaction history from block filter, subject of `details: txs`
--   `to` — `number` transaction history to block filter, subject of `details: txs`
--   `gap` — `number` address derivation gap size, subject of `details: tokens`
--   `contractFilter` — `string` Ethereum-like accounts only: get ERC20 token info and balance
--   `marker` — `{ ledger: number, seq: number }` XRP accounts only, transaction history page marker
--   `defaultAccountType` — `'normal' | 'segwit' | 'legacy'` Bitcoin-like accounts only: specify which account group is displayed as default in popup, subject of `Using discovery`
--   `suppressBackupWarning` - `boolean` By default, this method will emit an event to show a warning if the wallet does not have a backup. This option suppresses the message.
+<ParamsTable schema={OtherParamsSchema} descriptions={paramDescriptions} />
 
 ### Example
 
