--- a/packages/connect-explorer-nextra/src/pages/methods/device/getDeviceState.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/getDeviceState.mdx
@@ -7,7 +7,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 
 Return information about a specific device. Devices without passphrase enabled return the same per instance.
 
-[Device state](commonParams.md) can be used in any method (key derivation or TX signing) to enforce the same passphrase on furhter operations.
+[Device state](../../details/commonParams) can be used in any method (key derivation or TX signing) to enforce the same passphrase on furhter operations.
 
 ```javascript
 const result = await TrezorConnect.getDeviceState(params);
@@ -16,6 +16,8 @@ const result = await TrezorConnect.getDeviceState(params);
 ### Params
 
 <CommonParamsLink />
+
+No other parameters.
 
 ## Example
 
