--- a/packages/connect-explorer-nextra/src/pages/methods/device/wipeDevice.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/wipeDevice.mdx
@@ -15,8 +15,9 @@ const result = await TrezorConnect.wipeDevice(params);
 
 <CommonParamsLink />
 
-Common parameter `useEmptyPassphrase` - is set to `true`
-Common parameter `allowSeedlessDevice` - is set to `true`
+No other parameters.
+
+Common parameter `useEmptyPassphrase` - is set to `true`, `allowSeedlessDevice` - is set to `true`
 
 ### Example
 
