--- a/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumSignMessage.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/ethereum/ethereumSignMessage.mdx
@@ -15,7 +15,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `3`. [read more](../details/path)',
+    path: 'minimum length is `3`. [read more](/details/path)',
     message: 'message to sign in plain text',
     hex: 'convert message from hex',
 };
