--- a/packages/connect-explorer-nextra/src/pages/methods/other/getCurrentFiatRates.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/getCurrentFiatRates.mdx
@@ -1,6 +1,22 @@
-import { ApiPlayground } from '../../../components/ApiPlayground';
+import { Type } from '@sinclair/typebox';
 
-<ApiPlayground options={[{ title: 'No payload', method: 'blockchainGetCurrentFiatRates' }]} />
+import { ApiPlayground } from '../../../components/ApiPlayground';
+import { ParamsTable } from '../../../components/ParamsTable';
+
+export const GetCurrentFiatRatesSchema = Type.Object({
+    currencies: Type.Array(Type.String(), { description: 'Currency symbols (eur, usd, czk, ...)' }),
+    coin: Type.String({ description: 'Coin symbol (btc, eth, bch, ...)', example: 'btc' }),
+});
+
+<ApiPlayground
+    options={[
+        {
+            title: 'GetCurrentFiatRates',
+            schema: GetCurrentFiatRatesSchema,
+            method: 'blockchainGetCurrentFiatRates',
+        },
+    ]}
+/>
 
 ## Get current fiat rates
 
@@ -12,12 +28,7 @@ const result = await TrezorConnect.blockchainGetCurrentFiatRates(params);
 
 ### Params
 
-```javascript
-{
-    currencies: ['currency1','currency2','currency3',...],
-    coin: 'coin'
-}
-```
+<ParamsTable schema={GetCurrentFiatRatesSchema} />
 
 ### Example
 
@@ -25,8 +36,8 @@ Return current EUR, USD, BTC exchange rates for ETH:
 
 ```javascript
 const result = await TrezorConnect.blockchainGetCurrentFiatRates({
-    currencies: ['EUR', 'CZK', 'BTC'],
-    coin: 'ETH',
+    currencies: ['eur', 'czk', 'btc'],
+    coin: 'eth',
 });
 ```
 
