--- a/packages/connect-explorer-nextra/src/pages/methods/other/init.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/other/init.mdx
@@ -1,3 +1,42 @@
+import { Type } from '@sinclair/typebox';
+
+import { ParamsTable } from '../../../components/ParamsTable';
+
+export const InitSchema = Type.Object({
+    manifest: Type.Object({
+        appUrl: Type.String(),
+        email: Type.String(),
+    }),
+    connectSrc: Type.Optional(Type.String()),
+    debug: Type.Optional(Type.Boolean()),
+    transportReconnect: Type.Optional(Type.Boolean()),
+    pendingTransportEvent: Type.Optional(Type.Boolean()),
+    interactionTimeout: Type.Optional(Type.Number()),
+    lazyLoad: Type.Optional(Type.Boolean()),
+    popup: Type.Optional(Type.Boolean()),
+    transports: Type.Optional(
+        Type.Array(Type.Literal('BridgeTransport', 'WebUsbTransport', 'NodeUsbTransport')),
+    ),
+    webusb: Type.Optional(Type.Boolean()),
+});
+
+export const paramDescriptions = {
+    manifest: 'Application manifest with your email and appUrl.',
+    connectSrc: 'Set custom src for TrezorConnect iframe.',
+    debug: 'default `false`. Prints debug logs.',
+    transportReconnect:
+        'default `true`. If transport dies during lifecycle of application, this field decides whether TrezorConnect tries to reestablish connection with transport layer.',
+    pendingTransportEvent:
+        'default `true`. Postpone emitting TRANSPORT.START event to the moment when connected device becomes available.',
+    interactionTimeout: 'default `600`. Time in seconds after which popup automatically closes.',
+    lazyLoad:
+        'default `false`. Postpone iframe creation until TrezorConnect is called for the first time.',
+    popup: 'default `true`. Projects running on trusted domains (trezor.io) are not required to use popup. For other domains this option is ignored.',
+    transports:
+        'Array of transports that should be use. If not provided, TrezorConnect will chose a reasonable default based on your environment.',
+    webusb: 'default `true`. Allow webusb. Deprecated, you should use `transports` instead.',
+};
+
 ## Init
 
 Initiate TrezorConnect
@@ -8,19 +47,7 @@ const result = await TrezorConnect.init(params);
 
 ### Params
 
-[init type](https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/api/init.ts)
-
--   `manifest` - _required_ `Object` of type `[Manifest]`(https://github.com/trezor/trezor-suite/blob/develop/packages/connect/src/types/settings.ts#L3),
--   `connectSrc` - _optional_ `string`. Set custom src for TrezorConnect iframe.
--   `debug` - _optional_ `boolean`, default `false`. Prints debug logs.
--   `transportReconnect` - _optional_ `boolean`, default `true`. If transport dies during lifecycle of application, this field decides whether TrezorConnect tries to reestablish connection with transport layer.
--   `pendingTransportEvent` - _optional_ `boolean`, default `true`. Postpone emitting TRANSPORT.START event to the moment when connected device becomes available.
--   `interactionTimeout` - _optional_ `number`, default `600`. Time in seconds after which popup automatically closes.
--   `lazyLoad` - _optional_ `boolean`, default `false`. Postpone iframe creation until TrezorConnect is called for the first time.
--   `popup` - _optional_ `boolean`, default `true`. Projects running on trusted domains (trezor.io) are not required to use popup. For other domains this option is ignored.
--   `transports` — \_optional `'(BridgeTransport' | 'WebUsbTransport | 'NodeUsbTransport')[]'`, Array of transports that should be use. If not provided, TrezorConnect will chose a reasonable
-    default based on your environment.
--   `webusb` — _deprecated_ `boolean`, default `true`. Allow webusb. Deprecated, you should use `transports` instead.
+<ParamsTable schema={InitSchema} descriptions={paramDescriptions} />
 
 ### Result
 
