--- a/packages/connect-explorer-nextra/src/pages/methods/solana/solanaSignTransaction.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/solana/solanaSignTransaction.mdx
@@ -15,7 +15,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 />
 
 export const paramDescriptions = {
-    path: 'minimum length is `2`. [read more](../details/path)',
+    path: 'minimum length is `2`. [read more](/details/path)',
     serializedTx: '',
 };
 
