--- a/packages/connect-explorer-nextra/src/pages/methods/device/authenticateDevice.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/authenticateDevice.mdx
@@ -22,6 +22,11 @@ export const paramDescriptions = {
 
 ## authenticateDevice
 
+<Callout type="error" emoji="️🚫">
+    **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
+    applications.
+</Callout>
+
 <Callout type="info">**Supported only by T2B1 devices**</Callout>
 
 Request a signature and validate certificate issued by the Trezor company.
