--- a/packages/connect-explorer-nextra/src/pages/methods/device/backupDevice.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/backupDevice.mdx
@@ -1,9 +1,16 @@
+import { Callout } from 'nextra/components';
+
 import { CommonParamsLink } from '../../../components/CommonParamsLink';
 import { ApiPlayground } from '../../../components/ApiPlayground';
 
 <ApiPlayground options={[{ title: 'No payload', method: 'backupDevice' }]} />
 
 ## Backup device
+
+<Callout type="error" emoji="️🚫">
+    **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
+    applications.
+</Callout>
 
 Start seed backup process on the device. Can only be called if the seed is not backed up yet.
 
