--- a/packages/connect-explorer-nextra/src/pages/methods/device/getFirmwareHash.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/getFirmwareHash.mdx
@@ -23,6 +23,11 @@ export const paramDescriptions = {
 
 ## getFirmwareHash
 
+<Callout type="error" emoji="️🚫">
+    **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
+    applications.
+</Callout>
+
 <Callout type="info">**Supported only by firmwares 1.11.1 and 2.5.1 or higher!**</Callout>
 
 ### Params
