--- a/packages/connect-explorer-nextra/src/pages/methods/device/setBusy.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/setBusy.mdx
@@ -14,6 +14,11 @@ export const paramDescriptions = {
 
 ## Set busy
 
+<Callout type="error" emoji="️🚫">
+    **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
+    applications.
+</Callout>
+
 Show a "Do not disconnect" dialog instead of the standard homescreen.
 
 ```javascript
