--- a/packages/connect-explorer-nextra/src/pages/methods/device/changePin.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/changePin.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components';
+
 import { PROTO } from '@trezor/connect/src/constants';
 
 import { ParamsTable } from '../../../components/ParamsTable';
@@ -13,6 +15,11 @@ export const paramDescriptions = {
 };
 
 ## Change pin
+
+<Callout type="error" emoji="️🚫">
+    **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
+    applications.
+</Callout>
 
 This method initiates pin change sequence.
 
