--- a/packages/connect-explorer-nextra/src/pages/methods/device/firmwareUpdate.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/firmwareUpdate.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components';
+
 import { FirmwareUpdate } from '@trezor/connect/src/types/api/firmwareUpdate';
 
 import { ParamsTable } from '../../../components/ParamsTable';
@@ -17,6 +19,11 @@ export const paramDescriptions = {
 };
 
 ## firmwareUpdate
+
+<Callout type="error" emoji="️🚫">
+    **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
+    applications.
+</Callout>
 
 Installs a new firmware
 
