--- a/packages/connect-explorer-nextra/src/pages/changelog.mdx
+++ b/packages/connect-explorer-nextra/src/pages/changelog.mdx
@@ -1,3 +1,8 @@
+---
+auto_sections: false
+icon: LOG
+---
+
 import { useData } from 'nextra/data';
 import { serialize } from 'next-mdx-remote/serialize';
 import { MDXRemote } from 'next-mdx-remote';
