fix(connect-explorer-nextra): move images to subdirectory

--- a/packages/connect-explorer-nextra/src/pages/index.mdx
+++ b/packages/connect-explorer-nextra/src/pages/index.mdx
@@ -160,7 +160,7 @@ export const ExampleHeading = styled.h3`
         </Button>
     </SdkHeading>
 
-    ![connect schema when used in node](../../public/schema-connect.svg)
+    ![connect schema when used in node](../../public/images/schema-connect.svg)
 
     <SdkContainer>
         <SdkDescription>
@@ -197,7 +197,7 @@ export const ExampleHeading = styled.h3`
         </Button>
     </SdkHeading>
 
-    ![connect schema when used on web](../../public/schema-connect-web.svg)
+    ![connect schema when used on web](../../public/images/schema-connect-web.svg)
 
     <SdkContainer>
         <SdkDescription>
@@ -236,7 +236,7 @@ export const ExampleHeading = styled.h3`
         </Button>
     </SdkHeading>
 
-    ![connect schema when used in webextension](../../public/schema-connect-webextension.svg)
+    ![connect schema when used in webextension](../../public/images/schema-connect-webextension.svg)
 
     <SdkContainer>
         <SdkDescription>
